--- a/nca/css/nca.css
+++ b/nca/css/nca.css
@@ -14,3 +14,41 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
+.yellow {
+    color: yellow;
+}
+
+.col{
+
+}
+.col:after{
+    clear: both;
+}
+.col-2{
+    float: left;
+    width: 50%;
+}
+.col-3{
+    float: left;
+    width: 33%;
+}
+
+.text-left {
+    text-align: left;
+}
+
+div.font-fifty-percent {
+    font-size: 50%;
+}
+
+div.font-sixty-percent {
+    font-size: 60%;
+}
+
+/* Overwrites */
+.reveal section img {
+    border: 0;
+    background: none;
+    margin-top: 0px;
+}
